crates/diffler/src/ui/snapshots/diffler__ui__status__tests__several_projects_draw_a_tab_row_above_the_screen.snap
---
source: crates/diffler/src/ui/status.rs
expression: terminal.backend()
---
" 1 diffler   2 api   3 web                                                                            <a-n> add project "
" c commit · b branch · s stage · x discard · ? help                                                                     "
" Head:     main c1ac28f initial commit                                                                                  "
" Changes   +3 -1  █████                                                                                                 "
" Languages ████████████████  Rust 50% · Markdown 25% · YAML 25%                                                         "
"                                                                                                                        "
"▌▾ Untracked (1) +1 -0                                                                                                  "
" ○ todo.md +1 -0                                                                                                        "
"                                                                                                                        "
" ▾ Unstaged changes (1) +1 -1                                                                                           "
" ● src/lib.rs +1 -1                                                                                                     "
"                                                                                                                        "
" ▾ Staged changes (1) +1 -0                                                                                             "
" + ci.yml +1 -0                                                                                                         "
"                                                                                                                        "
" ▸ Recent commits (1)                                                                                                   "
"                                                                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                                                        "
" ▸ Branches (1)                                                                                                         "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" STATUS  fixture@main · mcp off · 3 files, 0 viewed                                                                     "
