crates/diffler/src/ui/snapshots/diffler__ui__status__tests__status_screen_in_a_jj_repo_folds_into_one_working_copy_section.snap
---
source: crates/diffler/src/ui/status.rs
expression: render(&mut app).backend()
---
" c commit · b branch · x discard · ? help                                                                               "
" Head:     main c1ac28f initial commit                                                                                  "
" Changes   +3 -1  █████                                                                                                 "
" Languages ████████████████  Rust 50% · Markdown 25% · YAML 25%                                                         "
"                                                                                                                        "
"▌▾ Working copy (@) (3) +3 -1                                                                                           "
" + ci.yml +1 -0                                                                                                         "
" ● src/lib.rs +1 -1                                                                                                     "
" + todo.md +1 -0                                                                                                        "
"                                                                                                                        "
" ▸ Recent commits (1)                                                                                                   "
"                                                                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                                                        "
" ▸ Branches (1)                                                                                                         "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" STATUS  fixture@main · mcp off · 3 files, 0 viewed                                                                     "
